legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr66618-2.c-5.4.0-3.out.txt
pr66618-2.c:5:9: error: initializer element is not constant
 int a = "foo"[2];
         ^
pr66618-2.c:6:9: error: initializer element is not constant
 int b = 1["bar"];
         ^
pr66618-2.c:7:9: error: initializer element is not constant
 int c = "baz"[__INT_MAX__ * -2];  
         ^
pr66618-2.c:8:9: error: initializer element is not constant
 int d = "str"[3];    
         ^
pr66618-2.c:9:9: error: initializer element is not constant
 int e = "str"[4];    
         ^
pr66618-2.c:10:9: error: initializer element is not constant
 int f = "str"[-1];    
         ^
